fixed toolbar style and z-index

--- a/src/less/materialnote.scss
+++ b/src/less/materialnote.scss
@@ -458,6 +458,7 @@
 /* Popover and Toolbar (Button container)
 ------------------------------------------*/
 .note-toolbar {
+    z-index: 500;
     background-color: $toolbar-color;
     position: relative;
 
